# model-review-app

./: .dockerignore  .gitattributes  .gitignore  .pre-commit-config.yaml  Dockerfile  ENVIRONMENT_REVIEW.md  README.md  VP_Review_Mockup.html  VP_Review_UX_Critique.md  app.py  benchmark_store.py  bible_audit.py  bible_reference.py  charts.py  comparison.py  compose.yaml  config.py  data_loader.py  mockup_view.py  pdf_export.py  pptx_export.py  pyproject.toml  requirements.txt  rows.py  run.bat  styles.py  utils.py  validation.py  walk_builder.py  xlsx_export.py
.github/workflows/: ci.yml
apps/api/: bible_store.py  main.py  store.py
apps/api/routers/: benchmarks.py  bible.py  export.py  models.py  review.py  walk.py
apps/web/: package-lock.json  package.json
apps/web/src/app/: globals.css  layout.tsx  page.tsx
apps/web/src/components/bible/: BibleManager.tsx
apps/web/src/components/charts/: CapitalStackChart.tsx  CashflowChart.tsx  HeatmapChart.tsx  PlotlyChart.tsx  TornadoChart.tsx  VarianceChart.tsx
apps/web/src/components/layout/: AppShell.tsx  AuditStrip.tsx  ProjectNavigator.tsx  TopBar.tsx
apps/web/src/components/review/: BibleMapping.tsx  BuildWalkView.tsx  PortfolioView.tsx  ProjectReviewView.tsx  ReferencePanel.tsx
apps/web/src/lib/: api.ts  format.ts
apps/web/src/stores/: bible.ts  portfolio.ts  reviewer.ts  ui.ts
docs/: rate_component_audit.md
legacy/: VP_Review_Mockup.html  app.py  styles.py
legacy/.streamlit/: config.toml
lib/: __init__.py  benchmark_store.py  bible_audit.py  bible_loader.py  bible_reference.py  config.py  data_loader.py  financial_constants.py  impact.py  mockup_view.py  rate_curve.py  rows.py  utils.py  walk_builder.py
lib/audit/: __init__.py  bible.py  checks.py  context.py  engine.py
lib/audit/rules/: __init__.py  cs_average.py  guidehouse.py  market_bible.py  range_check.py  wrapped_epc.py
tests/: test_api.py  test_audit_engine.py  test_benchmark_store.py  test_bible_api.py  test_bible_audit.py  test_bible_loader.py  test_bible_reference.py  test_bible_store.py  test_data_loader.py  test_filter_pipeline.py  test_financial_constants.py  test_full_mapping.py  test_inline_js.py  test_mockup_builders.py  test_mockup_view.py  test_rate_curve.py  test_rows.py  test_utils.py  test_walk_builder.py
tests/golden/: anonymize.py  snapshotter.py  test_golden.py
tests/golden/fixtures/: fixture_il_abp_portfolio.xlsm  fixture_il_pv_only.xlsm  fixture_md_bge.xlsm
tests/golden/snapshots/: fixture_il_abp_portfolio.audit.json  fixture_il_abp_portfolio.load.json  fixture_il_abp_portfolio.payload.json  fixture_il_pv_only.audit.json  fixture_il_pv_only.load.json  fixture_il_pv_only.payload.json  fixture_md_bge.audit.json  fixture_md_bge.load.json  fixture_md_bge.payload.json
